--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "gleam_javascript_template",
   "type": "module",
   "scripts": {
-    "build": "node bin/build.js build",
+    "build": "node bin/build.js build && ./node_modules/.bin/esbuild target/lib/gleam_javascript_template/main.js --bundle --outfile=dist/dist.js",
     "test": "node bin/build.js test",
-    "start": "node bin/build.js start",
     "uuid": "echo 8bde8a39a48c43d494284cacb7198ad1"
   },
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "esbuild": "^0.13.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "gleam-packages": "file:./target/lib"
